--- a/style/style.css
+++ b/style/style.css
@@ -2,9 +2,20 @@
     margin: 20px;
     text-align: center;
 }
-
-.search-bar input {
-    width: 75%;
+.container {
+    margin-left: 35px;
+    margin-right: 15px;
+    width: 90%;
+}
+.search-box input{
+    border-right-style:none;
+}
+.navbar {
+    color: white;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 0px;
+    background: #bb0000;
 }
 
 .video-item img {
@@ -26,3 +37,25 @@ video-detail .details {
     background-color: #eee;
 }
 
+.inputWithAddon input[type=text] {
+    padding-right: 40px;
+}
+.inputWithAddon {
+    width: 75%;
+    margin-bottom: 15px;
+    position: relative;
+    margin-right: auto;
+    margin-left: 0;
+}
+.inputWithAddon i{
+    position: absolute;
+    right: 0px;
+    top: 8px;
+    padding: 9px 8px;
+    color: red;
+    transition: 0.5s;
+
+}
+.inputWithAddon input[type=text]:focus i {
+    color: red;
+}
